# rayt

./: .gitignore  CMakeLists.txt  FindSDL2.cmake  run_cmake.sh
src/: all.c  apis.h  main.c  stb_image_write.h
